tests/fails/f37.t
if not require("fail") then return end

terra foo()
  return 4 .. 4
end
foo()
